--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.2.0
+  time_range_picker: ^2.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
