--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   time_range_picker: ^2.3.0
   cached_network_image: ^3.0.0  # Add this for network image caching (optional)
   # Add this for SVG support (optional)
+  google_sign_in: ^5.2.3  # Google sign-in package
 
 
   # The following adds the Cupertino Icons font to your application.
